--- a/Views/SobreView.axaml
+++ b/Views/SobreView.axaml
@@ -24,6 +24,24 @@
                  FontSize="14"
                  Text="O BlackSync é uma aplicação para sincronização entre bancos de dados Firebird e MySQL, com foco em performance, logs e controle de conexão. Desenvolvido em Avalonia com C#." />
 
+      <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Spacing="10" Margin="0,20,0,0">
+
+        <!-- Botão Linkedin -->
+        <Button Width="140" Click="AbrirLinkedIn_Click">
+          <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+            <Image Source="avares://BlackSync/Assets/Icons/linkedin.png" Width="20" Height="20" Margin="0,0,5,0"/>
+            <TextBlock Text="LinkedIn" VerticalAlignment="Center"/>
+          </StackPanel>
+        </Button>
+
+        <!-- Botão GitHub -->
+        <Button Width="140" Click="AbrirGitHub_Click">
+          <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+            <Image Source="avares://BlackSync/Assets/Icons/github.png" Width="20" Height="20" Margin="0,0,5,0"/>
+            <TextBlock Text="GitHub" VerticalAlignment="Center"/>
+          </StackPanel>
+        </Button>
+      </StackPanel>
     </StackPanel>
   </Grid>
 </UserControl>
